[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"
name = "serpent-cli"
version = "0.1.0"

[[bin]]
name = "serpent"
path = "src/main.rs"

[dependencies]
#serpent = { git = "https://github.com/hegza/serpent-rs" }
serpent = {path = "../serpent-rs"}
# Must match with rustc_ast version in serpent: "673.0.0"
rustc-ap-rustc_span = "694.0.0"

anyhow = "^1.0"
cargo-toml-builder = "^0.3"
clap = "^2.33"
flexi_logger = "^0.16"
fs-err = "^2.5"
itertools = "^0.10"
log = "^0.4"
thiserror = "^1.0"
toml = "^0.5"
